@@ -88,22 +88,24 @@ extraResourceOptions=
 6=map.c
 7=analyze.c
 8=defrag.c
+9=optimize.c
 [Header]
 1=udefrag-internals.h
 [Resource]
 1=udefrag.rc
 [Other]
 [History]
-volume.c,6519
-reports.c,5499
-analyze.c,2095
-options.c,900
-..\..\include\udefrag.h,1579
-udefrag.build,122
-udefrag-internals.h,3843
-udefrag.def,139
-udefrag-mingw.def,84
-main.dox,1775
-map.c,896
+reports.c,0
+options.c,0
+map.c,0
 int64.c,0
-udefrag.c,10090
+main.dox,1387
+udefrag-mingw.def,84
+udefrag.def,139
+udefrag-internals.h,7587
+udefrag.build,122
+..\..\include\udefrag.h,3025
+volume.c,0
+analyze.c,12307
+defrag.c,0
+udefrag.c,6785
