@@ -4,6 +4,8 @@ HISTORY
   ------------------------------------------------------------------------------
     RC1:
     - hexview command added to the boot time shell
+    - volume optimization reimplemented
+    - quick volume optimization implemented
     beta2:
     - UD_LOG_FILE_PATH environment variable added to force save of debugging
       information to a log file. Intended for use in boot time interface
